# vulkan-tutorial-rust-ash

./: .gitignore  Cargo.toml  README.MD  log4rs.yaml  rustfmt.toml
src/: main.rs
src/shader/: compile.bat  compile.sh  depth_buffering_shader.frag  image_sampler_shader.frag  image_sampler_shader.vert  shader.vert  ubo_shader.vert  vertex_input_shader.vert
src/totorial/: base_code.rs  combined_image_sampler.rs  command_buffers.rs  depth_buffering.rs  descriptor_layout_and_buffer.rs  descriptor_pool_and_sets.rs  fixed_functions.rs  framebuffers.rs  generating_mipmaps.rs  graphics_pipeline.rs  graphics_pipeline_complete.rs  image_view_and_sampler.rs  image_views.rs  images.rs  index_buffer.rs  instance.rs  loading_models.rs  logical_device.rs  mod.rs  physical_device_selection.rs  render_passes.rs  rendering_and_presentation.rs  shader_modules.rs  staging_buffer.rs  swap_chain.rs  swap_chain_recreation.rs  validation_layers.rs  vertex_buffer_creation.rs  vertex_input_description.rs  window_surface.rs
src/util/: utils.rs
