[package]
name = "vulkan_tutorial_rust"
version = "0.1.0"
authors = ["wanghanbin <544430497@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
windows = []
ios = []
android = []
debug = []

[dependencies]
ash = "0.29.0"
winit = "0.20.0"
serde = { version = "1.0.104", features = ["derive"] }
log = "0.4.8"
log4rs = "0.9.0"
nalgebra = "0.19.0"
image = "0.23.0"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = "0.3.8"